testing grid fix for overlap

--- a/css/shanti-main-images.css
+++ b/css/shanti-main-images.css
@@ -109,6 +109,10 @@ div.item.last-row{ clear:both;}
   z-index: 1;
 }
 
+.og-grid .item > a{
+  display:inline;
+}
+
 .og-fullimg img {
   margin: 0 0 0 1rem;
 }
